// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubflowRouterForm should create result actions for parameters 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "name": "max",
          "type": "set_run_result",
          "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
          "value": "100",
        },
        Object {
          "name": "min",
          "type": "set_run_result",
          "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
          "value": "1",
        },
        Object {
          "flow": Object {
            "name": "My Subflow Flow",
            "uuid": "my-subflow",
          },
          "type": "enter_flow",
          "uuid": "d4a3a01c-1dee-4324-b107-4ac7a21d836f",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        },
        Object {
          "destination_uuid": null,
          "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "C",
            ],
            "category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "type": "has_run_status",
            "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
          },
          Object {
            "arguments": Array [
              "E",
            ],
            "category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
            "type": "has_run_status",
            "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Complete",
            "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
          },
          Object {
            "exit_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "name": "Expired",
            "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          },
        ],
        "default_category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
        "operand": "@child.run.status",
        "type": "switch",
      },
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_subflow",
    },
  },
]
`;

exports[`SubflowRouterForm should init parameter tab 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="tabs"
      >
        <div
          class="tab "
        >
          Parameters
           
        </div>
      </div>
      <div
        class="header enter_flow"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Enter a Flow
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <temba-select
              searchable="true"
            >
              <temba-option
                name="Send the contact a message"
                value="send_msg"
              />
              <temba-option
                name="Wait for the contact to respond"
                value="wait_for_response"
              />
              <temba-option
                name="Send somebody else a message"
                value="send_broadcast"
              />
              <temba-option
                name="Label the incoming message"
                value="add_input_labels"
              />
              <temba-option
                name="Add a URN for the contact"
                value="add_contact_urn"
              />
              <temba-option
                name="Add the contact to a group"
                value="add_contact_groups"
              />
              <temba-option
                name="Remove the contact from a group"
                value="remove_contact_groups"
              />
              <temba-option
                name="Update the contact"
                value="set_contact_field"
              />
              <temba-option
                name="Send an email"
                value="send_email"
              />
              <temba-option
                name="Save a result for this flow"
                value="set_run_result"
              />
              <temba-option
                name="Call a webhook"
                value="call_webhook"
              />
              <temba-option
                name="Call Zapier"
                value="call_resthook"
              />
              <temba-option
                name="Enter another flow"
                selected="true"
                value="enter_flow"
              />
              <temba-option
                name="Start somebody else in a flow"
                value="start_session"
              />
              <temba-option
                name="Send the contact airtime"
                value="transfer_airtime"
              />
              <temba-option
                name="Split by intent"
                value="split_by_intent"
              />
              <temba-option
                name="Split by a custom expression"
                value="split_by_expression"
              />
              <temba-option
                name="Split by a contact field"
                value="split_by_contact_field"
              />
              <temba-option
                name="Split by a result in the flow"
                value="split_by_run_result"
              />
              <temba-option
                name="Split by random chance"
                value="split_by_random"
              />
              <temba-option
                name="Split by group membership"
                value="split_by_groups"
              />
              <temba-option
                name="Split by URN type"
                value="split_by_scheme"
              />
            </temba-select>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="react-select selection css-2b097c-container"
          >
            <div
              class=" css-1h1mxjq-control"
            >
              <div
                class=" css-1hwfws3"
              >
                <div
                  class=" css-1sdgdfu-singleValue"
                >
                  My Subflow Flow
                </div>
                <div
                  class="css-1al1kbh-Input"
                >
                  <div
                    class=""
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-3-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class=" css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class=" css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class=" css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SubflowRouterForm should render 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header enter_flow"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Enter a Flow
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <temba-select
              searchable="true"
            >
              <temba-option
                name="Send the contact a message"
                value="send_msg"
              />
              <temba-option
                name="Wait for the contact to respond"
                value="wait_for_response"
              />
              <temba-option
                name="Send somebody else a message"
                value="send_broadcast"
              />
              <temba-option
                name="Label the incoming message"
                value="add_input_labels"
              />
              <temba-option
                name="Add a URN for the contact"
                value="add_contact_urn"
              />
              <temba-option
                name="Add the contact to a group"
                value="add_contact_groups"
              />
              <temba-option
                name="Remove the contact from a group"
                value="remove_contact_groups"
              />
              <temba-option
                name="Update the contact"
                value="set_contact_field"
              />
              <temba-option
                name="Send an email"
                value="send_email"
              />
              <temba-option
                name="Save a result for this flow"
                value="set_run_result"
              />
              <temba-option
                name="Call a webhook"
                value="call_webhook"
              />
              <temba-option
                name="Call Zapier"
                value="call_resthook"
              />
              <temba-option
                name="Enter another flow"
                selected="true"
                value="enter_flow"
              />
              <temba-option
                name="Start somebody else in a flow"
                value="start_session"
              />
              <temba-option
                name="Send the contact airtime"
                value="transfer_airtime"
              />
              <temba-option
                name="Split by intent"
                value="split_by_intent"
              />
              <temba-option
                name="Split by a custom expression"
                value="split_by_expression"
              />
              <temba-option
                name="Split by a contact field"
                value="split_by_contact_field"
              />
              <temba-option
                name="Split by a result in the flow"
                value="split_by_run_result"
              />
              <temba-option
                name="Split by random chance"
                value="split_by_random"
              />
              <temba-option
                name="Split by group membership"
                value="split_by_groups"
              />
              <temba-option
                name="Split by URN type"
                value="split_by_scheme"
              />
            </temba-select>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="react-select selection css-2b097c-container"
          >
            <div
              class=" css-1h1mxjq-control"
            >
              <div
                class=" css-1hwfws3"
              >
                <div
                  class=" css-1sdgdfu-singleValue"
                >
                  Colors
                </div>
                <div
                  class="css-1al1kbh-Input"
                >
                  <div
                    class=""
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-2-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class=" css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class=" css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class=" css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
